// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  border-color: rgba(0,0,0,0.1);
  border-width: 0 0 1px 0;
  height: 0;
  margin: 0;
  width: auto;
}

<hr
  aria-orientation="horizontal"
  class="emotion-0 components-divider"
  data-wp-c16t="true"
  data-wp-component="Divider"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -2,10 +2,8 @@
    Object {
      "border-color": "rgba(0,0,0,0.1)",
      "border-width": "0 0 1px 0",
      "height": "0",
      "margin": "0",
-     "margin-bottom": "calc(4px * 7)",
-     "margin-top": "calc(4px * 7)",
      "width": "auto",
    },
  ]
`;

exports[`props should render marginBottom 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -2,9 +2,8 @@
    Object {
      "border-color": "rgba(0,0,0,0.1)",
      "border-width": "0 0 1px 0",
      "height": "0",
      "margin": "0",
-     "margin-bottom": "calc(4px * 5)",
      "width": "auto",
    },
  ]
`;

exports[`props should render marginTop 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -2,9 +2,8 @@
    Object {
      "border-color": "rgba(0,0,0,0.1)",
      "border-width": "0 0 1px 0",
      "height": "0",
      "margin": "0",
-     "margin-top": "calc(4px * 5)",
      "width": "auto",
    },
  ]
`;
